[tool.poetry]
name = "beta9"
version = "0.1.4"
description = ""
authors = ["beam.cloud <support@beam.cloud>"]
packages = [
    { include = "beta9", from = "src" },
    { include = "beta9/**/*.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
typeguard = "^2.13.3"
croniter = "^2.0.3"
typing-extensions = "^4.7.1"
grpclib = "^0.4.7"
grpcio = "^1.60.0"
asgiref = "^3.7.2"
cloudpickle = "^3.0.0"
rich = "^13.7.0"
click = "^8.1.7"
betterproto = {version = "2.0.0b6", extras = ["compiler"]}
protobuf = "^4.25.1"
fastapi = "^0.109.0"
uvicorn = "^0.29.0"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-env = "^1.1.3"
attrs = "^23.2.0"
docstring-parser = "^0.16"
ruff = "^0.3.7"
pydantic = "^2.5.3"

[tool.poetry.scripts]
beta9 = "beta9.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
exclude = ["src/beta9/clients"]
src = ["src", "test", "bin"]

[tool.ruff.per-file-ignores]
"src/beta9/__init__.py" = ["F403"]
