[tool.poetry]
name = "beta9"
version = "0.1.60"
description = ""
authors = ["beam.cloud <support@beam.cloud>"]
packages = [
    { include = "beta9", from = "src" },
    { include = "beta9/**/*.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
typeguard = "^2.13.3"
croniter = "^2.0.3"
typing-extensions = "^4.7.1"
grpclib = "^0.4.7"
grpcio = "^1.60.0"
asgiref = "^3.8.1"
cloudpickle = "^3.0.0"
rich = "^13.7.0"
click = "^8.1.7"
protobuf = "^4.25.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
watchdog = "^4.0.0"
betterproto-beta9 = {version = "2.0.0b7", extras = ["compiler"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-env = "^1.1.3"
attrs = "^23.2.0"
docstring-parser = "^0.16"
ruff = "*"
gunicorn = "^22.0.0"
requests = "^2.31.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
beta9 = "beta9.cli.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov --cov-report=html:.htmlcov"

[tool.coverage.report]
omit = ["tests/*"]
exclude_also = [
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.ruff]
line-length = 100
exclude = ["src/beta9/clients"]
src = ["src", "test", "bin"]

[tool.ruff.lint.per-file-ignores]
"src/beta9/__init__.py" = ["F403"]
